src/objects/Gaming_Table_Game_Dim__c.object
<CustomObject>
    <description>created based on csv file gaming_table_game_dim</description>
    <fields>
        <fullName>c_game_key__c</fullName>
        <label>c_game_key</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_game_cd__c</fullName>
        <label>c_prop_game_cd</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>c_quality_cd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_effective_end_date__c</fullName>
        <label>d_effective_end_date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_effective_start_date__c</fullName>
        <label>d_effective_start_date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_bet_off_peak__c</fullName>
        <label>f_bet_off_peak</label>
        <precision>13</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_bet_peak__c</fullName>
        <label>f_bet_peak</label>
        <precision>13</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cluster__c</fullName>
        <label>f_cluster</label>
        <precision>10</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cost_per_labor_hr__c</fullName>
        <label>f_cost_per_labor_hr</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_expected_lt_box_hold_pct__c</fullName>
        <label>f_expected_lt_box_hold_pct</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_fixed_time__c</fullName>
        <label>f_fixed_time</label>
        <precision>11</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_game_volatility__c</fullName>
        <label>f_game_volatility</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_house_adv__c</fullName>
        <label>f_house_adv</label>
        <precision>11</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_labor_per_table_hr__c</fullName>
        <label>f_labor_per_table_hr</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_misc_stats__c</fullName>
        <label>f_misc_stats</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_month_rental_fee_ft__c</fullName>
        <label>f_month_rental_fee_ft</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_month_rental_fee_pt__c</fullName>
        <label>f_month_rental_fee_pt</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_tax_rate__c</fullName>
        <label>f_tax_rate</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_formula_hold_pct__c</fullName>
        <label>f_theo_formula_hold_pct</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_var_time__c</fullName>
        <label>f_var_time</label>
        <precision>11</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_win_correction_factor__c</fullName>
        <label>f_win_correction_factor</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_game_num__c</fullName>
        <label>i_game_num</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_game_speed_theo_formula__c</fullName>
        <label>i_game_speed_theo_formula</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_include_flag__c</fullName>
        <label>i_include_flag</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_seats_available__c</fullName>
        <label>i_seats_available</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Gaming Table Game Dim</label>
    <nameField>
        <label>Gaming Table Game Dim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gaming Table Game Dims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>